--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@ position: relative; aspect-ratio: 1/1; overflow: hidden; display: block;        
                 <li><a href="notalar.html" data-lang="menu_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-lang="menu_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" data-lang="menu_concerts">KONSERLER</a></li>
+                <li><a href="blog.html" class="active" data-lang="menu_blog">BLOG</a></li>
             </ul>
         </div>
     </nav>
