--- a/blog.html
+++ b/blog.html
@@ -202,7 +202,7 @@
                     <span class="card-meta">TEKNOLOJİ • 5 ŞUBAT 2026</span>
                     <h3 class="card-title">Müzik Eğitiminde Yapay Zeka</h3>
                     <p class="card-excerpt">Müzik eğitimi, tarih boyunca hep bir "aktarım" meselesi olmuştur. Eskiden bir ustanın dizinin dibine çöker, mızrabı...</p>
-                    <a href="#" class="read-more-btn">DEVAMINI OKU</a>
+                    <a href="yapay-zeka.html" class="read-more-btn">DEVAMINI OKU</a>
                 </div>
             </article>
 
