--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2021,7 +2021,8 @@ gununBilgisiniGetir();
         "elifin-epostası-gelecek@xyz.com": { ad: "RWxpZg==", soyad: "S0FSTUFO" },
       "ZmVyaGF0Y2l2YW4wMjA1QG91dGxvb2suY29t": { ad: "RmVyaGF0ZQ==", soyad: "Q2l2YW5lIEJha2FuZQ==" },
       "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" },
-      "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" }
+      "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" },
+      "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ8SxZGHFnw==", soyad: "QUtJTkNJ" }
   };
 
   // --- ŞİFRE SIFIRLAMA FONKSİYONU EKLENDİ ---
