--- a/hakkinda.html
+++ b/hakkinda.html
@@ -282,6 +282,8 @@
                 <li><a href="notalar.html" data-lang="menu_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-lang="menu_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" data-lang="menu_concerts">KONSERLER</a></li>
+                <li><a href="blog.html" data-lang="menu_concerts">BLOG</a></li>
+
             </ul>
         </div>
     </nav>
