--- a/hakkinda.html
+++ b/hakkinda.html
@@ -377,6 +377,7 @@
                 menu_notes: "NOTALAR",
                 menu_poems: "ŞİİRLER",
                 menu_concerts: "KONSERLER",
+                menu_blog: "BLOG",
                 bio_title: "Hakkında",
                 bio_p1: "Mahmut Burak ASLANTAŞ, 8 Şubat 2002 yılında Birecik'te dünyaya gelmiştir. Müzikal yolculuğuna çocuk yaşlarında bağlama ile başlamıştır. Lise eğitimini Mehmet Adil Çulcuoğlu Anadolu Lisesinde tamamlamıştır. 2021 yılında Adnan Menderes Üniversitesinde Müzik Öğretmenliği bölümünü kazanmıştır. Öğrencilik döneminde okulun çeşitli projelerinde ve konserlerinde yer almıştır.",
                 bio_p2: "2024 yılında TRT Türk Halk Müziği Gençlik Korosuna bağlama icracısı olarak katılmıştır. 17 Aralık 2025'te Elzė MARKEVIČIŪTĖ'nin katılımı ile \"East to West\" projesi kapsamında ilk konserini tamamlamıştır. Aslantaş, müziği sadece bir ses dizisi değil, kültürler arası bir köprü olarak konumlandırmaktadır. Aynı zamanda amatör olarak şiirle uğraşan Aslantaş, şarkı sözü ve yeni beste üretme yolunda çalışmalarını sürdürmektedir.",
@@ -396,6 +397,7 @@
                 menu_notes: "SHEET MUSIC",
                 menu_poems: "POEMS",
                 menu_concerts: "CONCERTS",
+                menu_blog: "BLOG",
                 bio_title: "About Me",
                 bio_p1: "Mahmut Burak ASLANTAŞ was born on February 8, 2002, in Birecik. He started his musical journey with the baglama at a young age. He completed his high school education at Mehmet Adil Çulcuoğlu Anatolian High School. In 2021, he was accepted into the Music Education Department at Adnan Menderes University. During his student years, he participated in various school projects and concerts.",
                 bio_p2: "In 2024, he joined the TRT Turkish Folk Music Youth Choir as a baglama performer. On December 17, 2025, he completed his first concert as part of the \"East to West\" project with the participation of Elzė MARKEVIČIŪTĖ. Aslantaş positions music not just as a sequence of sounds, but as a bridge between cultures. Also engaging in poetry as an amateur, Aslantaş continues his work towards producing song lyrics and new compositions.",
@@ -415,6 +417,7 @@
                 menu_notes: "NATOS",
                 menu_poems: "EILĖRAŠČIAI",
                 menu_concerts: "KONCERTAI",
+                menu_blog: "BLOG",
                 bio_title: "Apie Mane",
                 bio_p1: "Mahmut Burak ASLANTAŞ gimė 2002 m. vasario 8 d. Birecike. Muzikinę kelionę su baglama pradėjo dar vaikystėje. Vidurinį išsilavinimą įgijo Mehmet Adil Çulcuoğlu Anatolijos vidurinėje mokykloje. 2021 m. įstojo į Adnan Menderes universiteto Muzikos pedagogikos katedrą. Studijų metais dalyvavo įvairiuose mokyklos projektuose ir koncertuose.",
                 bio_p2: "2024 m. prisijungė prie TRT Turkų liaudies muzikos jaunimo choro kaip baglamos atlikėjas. 2025 m. gruodžio 17 d. surengė pirmąjį koncertą kaip projekto „East to West“ (kartu su Elzė MARKEVIČIŪTĖ) dalį. Aslantaş muziką vertina ne tik kaip garsų seką, bet ir kaip tiltą tarp kultūrų. Mėgėjiškai užsiimdamas poezija, Aslantaş tęsia darbą kurdamas dainų tekstus ir naujas kompozicijas.",
@@ -434,6 +437,7 @@
                 menu_notes: "NOTEN",
                 menu_poems: "GEDICHTE",
                 menu_concerts: "KONZERTE",
+                menu_blog: "BLOG",
                 bio_title: "Über Mich",
                 bio_p1: "Mahmut Burak ASLANTAŞ wurde am 8. Februar 2002 in Birecik geboren. Seine musikalische Reise begann schon in jungen Jahren mit der Baglama. Seine Schulausbildung absolvierte er am Mehmet Adil Çulcuoğlu Anatolian High School. Im Jahr 2021 wurde er an der Abteilung für Musikpädagogik der Adnan Menderes Universität aufgenommen. Während seiner Studienzeit nahm er an verschiedenen Schulprojekten und Konzerten teil.",
                 bio_p2: "Im Jahr 2024 trat er dem TRT Jugendchor für türkische Volksmusik als Baglama-Spieler bei. Am 17. Dezember 2025 absolvierte er sein erstes Konzert im Rahmen des Projekts „East to West“ unter Beteiligung von Elzė MARKEVIČIŪTĖ. Aslantaş positioniert Musik nicht nur als eine Folge von Klängen, sondern als Brücke zwischen den Kulturen. Aslantaş beschäftigt sich auch amateurhaft mit Poesie und setzt seine Arbeit fort, um Liedtexte und neue Kompositionen zu produzieren.",
@@ -453,6 +457,7 @@
                 menu_notes: "НОТЫ",
                 menu_poems: "СТИХИ",
                 menu_concerts: "КОНЦЕРТЫ",
+                menu_blog: "BLOG",
                 bio_title: "Обо мне",
                 bio_p1: "Махмут Бурак АСЛАНТАШ родился 8 февраля 2002 года в Биреджике. Его музыкальный путь начался в юном возрасте с игры на багламе. Он окончил Анатолийскую среднюю школу имени Мехмета Адиля Чулджуоглу. В 2021 году поступил на факультет музыкального образования Университета Аднана Мендереса. В студенческие годы участвовал в различных школьных проектах и концертах.",
                 bio_p2: "В 2024 году он присоединился к Молодежному хору турецкой народной музыки TRT в качестве исполнителя на багламе. 17 декабря 2025 года он дал свой первый концерт в рамках проекта «East to West» с участием Эльзе МАРКЕВИЧЮТЕ. Асланташ позиционирует музыку не просто как последовательность звуков, а как мост между культурами. Также занимаясь поэзией на любительском уровне, Асланташ продолжает работать над созданием текстов песен и новых композиций.",
