--- a/hakkinda.html
+++ b/hakkinda.html
@@ -282,7 +282,7 @@
                 <li><a href="notalar.html" data-lang="menu_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-lang="menu_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" data-lang="menu_concerts">KONSERLER</a></li>
-                <li><a href="blog.html" data-lang="menu_concerts">BLOG</a></li>
+                <li><a href="blog.html" data-lang="menu_blogs">BLOG</a></li>
 
             </ul>
         </div>
