--- a/online-egitim.html
+++ b/online-egitim.html
@@ -437,6 +437,7 @@
                 <li><a href="notalar.html" data-translate="nav_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-translate="nav_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" data-translate="nav_concerts">KONSERLER</a></li>
+                <li><a href="blog.html" data-translate="nav_blogs">BLOG</a></li>
             </ul>
         </div>
     </nav>
@@ -2195,6 +2196,7 @@ gununBilgisiniGetir();
                 menu_notes: "NOTALAR",
                 menu_poems: "ŞİİRLER",
                 menu_concerts: "KONSERLER",
+                menu_blogs: "BLOG",
                 why_edu_title: "Neden Online Eğitim?",
                 feat_ai_title: "Yapay Zeka ile Eğitim",
                 feat_ai_desc: "Yapay zeka destekli müzik öğretmeniniz BurakAI ile eğitimde yeni bir dönem. Bu teknolojiyi kullanmak ve derslerinize entegre etmek için aşağıdaki formu doldurarak ders paketlerimizi satın alabilirsiniz.",
@@ -2302,6 +2304,7 @@ gununBilgisiniGetir();
                 menu_notes: "SHEET MUSIC",
                 menu_poems: "POEMS",
                 menu_concerts: "CONCERTS",
+                menu_blogs: "BLOG",
                 why_edu_title: "Why Online Education?",
                 feat_ai_title: "AI-Powered Education",
                 feat_ai_desc: "A new era in education with your AI music teacher BurakAI. You can purchase our lesson packages by filling out the form below to use this technology and integrate it into your lessons.",
@@ -2409,6 +2412,7 @@ gununBilgisiniGetir();
                 menu_notes: "NATOS",
                 menu_poems: "EILĖRAŠČIAI",
                 menu_concerts: "KONCERTAI",
+                menu_blogs: "BLOG",
                 why_edu_title: "Kodėl verta mokytis internetu?",
                 feat_ai_title: "Mokymasis su dirbtiniu intelektu",
                 feat_ai_desc: "Nauja era švietime su jūsų DI muzikos mokytoju BurakAI. Norėdami naudoti šią technologiją ir integruoti ją į savo pamokas, galite įsigyti mūsų pamokų paketus užpildydami žemiau esančią formą.",
@@ -2514,6 +2518,7 @@ gununBilgisiniGetir();
                 menu_notes: "NOTEN",
                 menu_poems: "GEDICHTE",
                 menu_concerts: "KONZERTE",
+                menu_blogs: "BLOG",
                 why_edu_title: "Warum Online-Unterricht?",
                 feat_ai_title: "KI-gestützte Bildung",
                 feat_ai_desc: "Eine neue Ära in der Bildung mit Ihrem KI-Musiklehrer BurakAI. Sie können unsere Lektionspakete kaufen, indem Sie das untenstehende Formular ausfüllen, um diese Technologie zu nutzen und in Ihren Unterricht zu integrieren.",
