--- a/notalar.html
+++ b/notalar.html
@@ -247,13 +247,14 @@
                 <li><a href="notalar.html" class="active" data-lang="menu_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-lang="menu_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" data-lang="menu_concerts">KONSERLER</a></li>
+                <li><a href="blog.html" data-lang="menu_blog">BLOG</a></li>
             </ul>
         </div>
     </nav>
 
     <header class="page-header">
         <h1 data-lang="page_title">NOTALAR</h1>
-        <p style="color: var(--text-secondary); font-family: 'Playfair Display', serif; font-style: italic; margin-top: 10px;" data-lang="page_subtitle">Bağlama repertuvarı ve döküman arşivi...</p>
+        <p style="color: var(--text-secondary); font-family: 'Playfair Display', serif; font-style: italic; margin-top: 10px;" data-lang="page_subtitle">Bestelerin yer aldığı bölüm...</p>
     </header>
 
     <div class="main-container">
@@ -319,6 +320,7 @@
                 menu_notes: "NOTALAR",
                 menu_poems: "ŞİİRLER",
                 menu_concerts: "KONSERLER",
+                menu_blog: "BLOG",
                 page_title: "NOTALAR",
                 page_subtitle: "Bağlama repertuvarı ve döküman arşivi...",
                 search_ph: "Eser adı veya besteci ara...",
@@ -336,6 +338,7 @@
                 menu_notes: "SHEET MUSIC",
                 menu_poems: "POEMS",
                 menu_concerts: "CONCERTS",
+                menu_blog: "BLOG",
                 page_title: "SHEET MUSIC",
                 page_subtitle: "Baglama repertoire and document archive...",
                 search_ph: "Search song title or composer...",
@@ -353,6 +356,7 @@
                 menu_notes: "NATOS",
                 menu_poems: "EILĖRAŠČIAI",
                 menu_concerts: "KONCERTAI",
+                menu_blog: "BLOG",
                 page_title: "NATOS",
                 page_subtitle: "Baglamos repertuaras ir dokumentų archyvas...",
                 search_ph: "Ieškoti kūrinio pavadinimo ar kompozitoriaus...",
@@ -370,6 +374,7 @@
                 menu_notes: "NOTEN",
                 menu_poems: "GEDICHTE",
                 menu_concerts: "KONZERTE",
+                menu_blog: "BLOG",
                 page_title: "NOTEN",
                 page_subtitle: "Baglama-Repertoire und Dokumentenarchiv...",
                 search_ph: "Nach Titel oder Komponist suchen...",
@@ -387,6 +392,7 @@
                 menu_notes: "НОТЫ",
                 menu_poems: "СТИХИ",
                 menu_concerts: "КОНЦЕРТЫ",
+                menu_blog: "BLOG",
                 page_title: "НОТЫ",
                 page_subtitle: "Репертуар для багламы и архив документов...",
                 search_ph: "Поиск по названию или композитору...",
