--- a/konserler.html
+++ b/konserler.html
@@ -532,7 +532,7 @@
         const translations = {
             tr: {
                 lang_label: "LANGUAGE",
-                menu_home: "ANA SAYFA", menu_about: "HAKKINDA", menu_edu: "ONLINE EĞİTİM", menu_notes: "NOTALAR", menu_poems: "ŞİİRLER", menu_concerts: "KONSERLER",
+                menu_home: "ANA SAYFA", menu_about: "HAKKINDA", menu_edu: "ONLINE EĞİTİM", menu_notes: "NOTALAR", menu_poems: "ŞİİRLER", menu_concerts: "KONSERLER",   menu_blog: "BLOG",
                 header_title: "KONSERLER",
                 spotlight_desc: "Anadolu'nun kadim ezgilerinin Batı'nın klasik formlarıyla buluştuğu eşsiz bir müzikal yolculuk. <span class='highlight-name'>Mahmut Burak ASLANTAŞ</span> ve <span class='highlight-name'>Elzė MARKEVIČIŪTĖ</span>'nin ortak projesi olan bu konser, kültürlerarası bir köprü kurarak dinleyicilere unutulmaz bir deneyim sunuyor.",
                 meta_date: "17 ARALIK 2025", meta_loc: "ADNAN MENDERES ÜNİVERSİTESİ",
@@ -543,7 +543,7 @@
             },
             en: {
                 lang_label: "LANGUAGE",
-                menu_home: "HOME", menu_about: "ABOUT ME", menu_edu: "ONLINE LESSONS", menu_notes: "SHEET MUSIC", menu_poems: "POEMS", menu_concerts: "CONCERTS",
+                menu_home: "HOME", menu_about: "ABOUT ME", menu_edu: "ONLINE LESSONS", menu_notes: "SHEET MUSIC", menu_poems: "POEMS", menu_concerts: "CONCERTS", menu_blog: "BLOG",
                 header_title: "CONCERTS",
                 spotlight_desc: "A unique musical journey where ancient Anatolian melodies meet Western classical forms. A joint project by <span class='highlight-name'>Mahmut Burak ASLANTAŞ</span> and <span class='highlight-name'>Elzė MARKEVIČIŪTĖ</span>, this concert builds an intercultural bridge, offering an unforgettable experience to the audience.",
                 meta_date: "DECEMBER 17, 2025", meta_loc: "ADNAN MENDERES UNIVERSITY",
@@ -554,7 +554,7 @@
             },
             de: {
                 lang_label: "SPRACHE",
-                menu_home: "STARTSEITE", menu_about: "ÜBER MICH", menu_edu: "ONLINE-UNTERRICHT", menu_notes: "NOTEN", menu_poems: "GEDICHTE", menu_concerts: "KONZERTE",
+                menu_home: "STARTSEITE", menu_about: "ÜBER MICH", menu_edu: "ONLINE-UNTERRICHT", menu_notes: "NOTEN", menu_poems: "GEDICHTE", menu_concerts: "KONZERTE",         menu_blog: "BLOG",
                 header_title: "KONZERTE",
                 spotlight_desc: "Eine einzigartige musikalische Reise, bei der alte anatolische Melodien auf klassische westliche Formen treffen. Dieses gemeinsame Projekt von <span class='highlight-name'>Mahmut Burak ASLANTAŞ</span> und <span class='highlight-name'>Elzė MARKEVIČIŪTĖ</span> baut eine interkulturelle Brücke und bietet den Zuhörern ein unvergessliches Erlebnis.",
                 meta_date: "17. DEZEMBER 2025", meta_loc: "ADNAN MENDERES UNIVERSITÄT",
@@ -576,7 +576,7 @@
             },
             lt: {
                 lang_label: "KALBA",
-                menu_home: "PAGRINDINIS", menu_about: "APIE MANE", menu_edu: "INTERNETINĖS PAMOKOS", menu_notes: "NATOS", menu_poems: "EILĖRAŠČIAI", menu_concerts: "KONCERTAI",
+                menu_home: "PAGRINDINIS", menu_about: "APIE MANE", menu_edu: "INTERNETINĖS PAMOKOS", menu_notes: "NATOS", menu_poems: "EILĖRAŠČIAI", menu_concerts: "KONCERTAI", menu_blog: "BLOG",
                 header_title: "KONCERTAI",
                 spotlight_desc: "Unikali muzikinė kelionė, kurioje senovinės Anatolijos melodijos susitinka su Vakarų klasikinėmis formomis. Šis bendras <span class='highlight-name'>Mahmut Burak ASLANTAŞ</span> ir <span class='highlight-name'>Elzė MARKEVIČIŪTĖ</span> projektas tiesia tarpkultūrinį tiltą ir klausytojams dovanoja nepamirštamą patirtį.",
                 meta_date: "2025 M. GRUODŽIO 17 D.", meta_loc: "ADNAN MENDERES UNIVERSITETAS",
