--- a/konserler.html
+++ b/konserler.html
@@ -423,6 +423,7 @@
                 <li><a href="notalar.html" data-lang="menu_notes">NOTALAR</a></li>
                 <li><a href="siirler.html" data-lang="menu_poems">ŞİİRLER</a></li>
                 <li><a href="konserler.html" class="active" data-lang="menu_concerts">KONSERLER</a></li>
+                <li><a href="blog.html" class="active" data-lang="menu_blog">BLOG</a></li>
             </ul>
         </div>
     </nav>
