--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2243,7 +2243,7 @@ gununBilgisiniGetir();
                 exam_card_desc: "Konservatuvarı, Müzik Öğretmenliği ve GSL için hazırlık soruları.",
                 fun_card_desc: "Öğrenmeyi daha eğlenceli hale getiriyoruz.",
                 live_card_desc: "Sanal sınıfa bağlanarak canlı derse katılın.",
-                tools_card_desc: "Metronom, Akort Cihazı işe yarayan araçlar içerir.",
+                tools_card_desc: "Metronom, Akort Cihazı gibi işe yarayan araçları içerir.",
                 ai_intro_text: "Kafana takılan her şeyi sorabilirsin, ben senin için burdayım ciğerim.",
                 ai_name_chat: "BurakAI Hoca:",
                 ai_welcome_msg: "Gel bakalım evladım, hoş geldin. Sazın kucağındaysa, gönlün de aşka hazırsa aşamayacağımız yokuş yok. 'Yorulduk' demek yok, 'yapamıyorum' demek yok. Ben senin her adımda yanındayım. Hadi bismillah diyelim, sor bakalım kafana takılan şey nedir?",
