--- a/bilgi-yarismasi/oyun.html
+++ b/bilgi-yarismasi/oyun.html
@@ -182,7 +182,7 @@
     <div id="welcome-screen" class="screen active">
         <div class="welcome-icon">🎵</div>
         <h1 id="txt-title">Bağlamagram</h1>
-        <p class="subtitle" id="txt-subtitle">Halk Müziği Bilgi Yarışması</p>
+        <p class="subtitle" id="txt-subtitle">Müzik Bilgi Yarışması</p>
         <button class="start-btn" id="btn-start" onclick="oyunuBaslat()">Yarışmaya Başla</button>
     </div>
 
