--- a/blog.html
+++ b/blog.html
@@ -181,6 +181,18 @@
     <main class="blog-container">
         <div class="blog-grid">
 
+
+             <article class="blog-card">
+                <div class="card-image">
+                    <img src="https://i.hizliresim.com/rx7smwt.png" alt="Müzik Kayıt">
+                </div>
+                <div class="card-content">
+                    <span class="card-meta">EĞİTİM • 11 ŞUBAT 2026</span>
+                    <h3 class="card-title">Çevrimiçi (Online) Bağlama Eğitiminin Avantajları</h3>
+                    <p class="card-excerpt">Geleneksel müzik eğitiminin en köklü enstrümanlarından biri olan bağlama, günümüzde dijital dünyanın sunduğu imkanl...</p>
+                    <a href="blog-online.html" class="read-more-btn">DEVAMINI OKU</a>
+                </div>
+            </article>
             
             <article class="blog-card">
                 <div class="card-image">
