--- a/blog.html
+++ b/blog.html
@@ -196,7 +196,7 @@
             
             <article class="blog-card">
                 <div class="card-image">
-                    <img src="https://i.hizliresim.com/ah5qv20.png" alt="Müzik Kayıt">
+                    <img src="(bkz: https://i.hizliresim.com/dr6dqd3.png" alt="Müzik Kayıt">
                 </div>
                 <div class="card-content">
                     <span class="card-meta">TEKNİK BİLGİ • 7 ŞUBAT 2026</span>
