--- a/blog-baglama-secimi.html
+++ b/blog-baglama-secimi.html
@@ -96,7 +96,7 @@
     </header>
 
     <article class="article-container">
-        <img src="https://i.hizliresim.com/ah5qv20.png" alt="Kapak Görseli" class="article-featured-image">
+        <img src="https://i.hizliresim.com/dr6dqd3.png" alt="Kapak Görseli" class="article-featured-image">
 
         <div class="article-content">
             <p>Bağlama dediğin, Anadolu’nun tozuna toprağına karışmış, bin yıllık dertlerin süzgecinden geçmiş bir deryadır. Elinize aldığınızda o odun parçasının size bir şeyler fısıldaması gerekir. Eğer bir bağlama alacaksanız, ilk kuralımız şu olsun: En pahalı bağlama, en iyi bağlama değildir. Sizin elinize, sesinize ve icra etmek istediğiniz tavra en uygun olan bağlama en iyisidir.
