--- a/online-egitim.html
+++ b/online-egitim.html
@@ -755,7 +755,14 @@
                     <div id="live-class-view" class="view-section">
                         <div class="dashboard-header" style="display: flex; justify-content: space-between;">
                             <h2 data-translate="portal_menu_live">Sanal Sınıf</h2>
-                            <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; transition:0.3s;">← <span data-translate="back_btn">Geri</span></button>
+                            <div>
+                                <button onclick="tamEkranYap('whereby-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
+                                    <i class="fas fa-expand"></i> Tam Ekran
+                                </button>
+                                <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; transition:0.3s;">
+                                    ← <span data-translate="back_btn">Geri</span>
+                                </button>
+                            </div>
                         </div>
                         
                         <div style="width: 100%; height: 600px; border-radius: 15px; overflow: hidden; border: 1px solid var(--glass-border); background: #000;">
@@ -766,7 +773,7 @@
                                 style="width: 100%; height: 100%; border: none;">
                             </iframe>
                         </div>
-                        <p style="text-align:center; color:#666; font-size:0.8rem; margin-top:10px;" data-translate="live_note">En iyi performans için kulaklık kullanınız.</p>
+                        <p style="text-align:center; color:#666; font-size:0.8rem; margin-top:10px;" data-translate="live_note">İnternet bağlantınız düzgün ve sorunsuz olmalı. İyi Dersler:) ...</p>
                     </div>
 
                     <div id="baglama-menu-view" class="view-section">
