--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1502,7 +1502,7 @@
             const loadingBubble = document.createElement("div");
             loadingBubble.className = "chat-message ai";
             loadingBubble.id = "loadingBubble";
-            loadingBubble.innerHTML = "<em>Burak Hoca inceliyor... (Yazıyor)</em>";
+            loadingBubble.innerHTML = "<em>Burak Hoca düşünüyor...</em>";
             box.appendChild(loadingBubble);
             box.scrollTop = box.scrollHeight;
 
