--- a/bilgi-yarismasi/nota-yagmuru.html
+++ b/bilgi-yarismasi/nota-yagmuru.html
@@ -11,12 +11,12 @@
             /* Nota Renkleri (Boomwhackers Standartlarına Yakın) */
             --c-do: #ff4757;  /* Kırmızı */
             --c-re: #ffa502;  /* Turuncu */
-            --c-mi: #eccc68;  /* Sarı */
+            --c-mi: #ffe100;  /* Sarı */
             --c-fa: #2ed573;  /* Yeşil */
             --c-sol: #1e90ff; /* Mavi */
             --c-la: #3742fa;  /* Koyu Mavi/İndigo */
             --c-si: #a55eea;  /* Mor */
-            --c-do2: #ff6b81; /* Açık Kırmızı */
+            --c-do2: #ff4757; /* Açık Kırmızı */
         }
 
         body {
@@ -65,7 +65,7 @@
         #game-over-screen { display: none; }
 
         h1 { 
-            background: linear-gradient(to right, #ff4757, #ffa502, #2ed573, #1e90ff, #a55eea);
+            background: linear-gradient(to right, #ff4757, #ffa502, #2ed573, #1e90ff, #a55eea, #ffffff, #00cc30);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -278,12 +278,12 @@
         <div class="controls-bar">
             <button class="note-btn" onmousedown="checkInput('Do', '#ff4757')" ontouchstart="checkInput('Do', '#ff4757')">DO</button>
             <button class="note-btn" onmousedown="checkInput('Re', '#ffa502')" ontouchstart="checkInput('Re', '#ffa502')">RE</button>
-            <button class="note-btn" onmousedown="checkInput('Mi', '#eccc68')" ontouchstart="checkInput('Mi', '#eccc68')">Mİ</button>
+            <button class="note-btn" onmousedown="checkInput('Mi', '#ffe100')" ontouchstart="checkInput('Mi', '#ffe100')">Mİ</button>
             <button class="note-btn" onmousedown="checkInput('Fa', '#2ed573')" ontouchstart="checkInput('Fa', '#2ed573')">FA</button>
             <button class="note-btn" onmousedown="checkInput('Sol', '#1e90ff')" ontouchstart="checkInput('Sol', '#1e90ff')">SOL</button>
             <button class="note-btn" onmousedown="checkInput('La', '#3742fa')" ontouchstart="checkInput('La', '#3742fa')">LA</button>
             <button class="note-btn" onmousedown="checkInput('Si', '#a55eea')" ontouchstart="checkInput('Si', '#a55eea')">Sİ</button>
-            <button class="note-btn" onmousedown="checkInput('Do', '#ff6b81')" ontouchstart="checkInput('Do', '#ff6b81')">DO</button>
+            <button class="note-btn" onmousedown="checkInput('Do', '#ff4757')" ontouchstart="checkInput('Do', '#ff4757')">DO</button>
         </div>
     </div>
 
