--- a/online-egitim.html
+++ b/online-egitim.html
@@ -885,6 +885,10 @@
                                 <span class="cat-title" data-translate="nota_rain_title">Nota Yağmuru</span>
                                 <span class="cat-desc" data-translate="nota_rain_desc">Notaları doğru zamanda yakalayarak reflekslerinizi geliştirin.</span>
                             </div>
+                             <div class="cat-box" onclick="sayfaGoster('fa-key-view')">
+                                <span class="cat-title" data-translate="fa_key_title">Nota Yağmuru (Fa Anahtarı)</span>
+                                <span class="cat-desc" data-translate="fa_key_desc">Notaları doğru zamanda yakalayarak reflekslerinizi geliştirin.</span>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -1035,6 +1039,27 @@
                             height="750" 
                             style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
                             title="Nota Yağmuru">
+                        </iframe>
+                    </div>
+
+                 <div id="fa-key-view" class="view-section">
+                        <div class="dashboard-header" style="display: flex; justify-content: space-between;">
+                            <h2 data-translate="fa_key_title">Nota Yağmuru (Fa Anahtarı)</h2>
+                            <div>
+                                <button onclick="tamEkranYap('fa-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
+                                    <i class="fas fa-expand"></i> Tam Ekran
+                                </button>
+                                <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Çıkış</span></button>
+                            </div>
+                        </div>
+                        
+                        <iframe 
+                            id="fa-frame"
+                            src="fa-key.html" 
+                            width="100%" 
+                            height="750" 
+                            style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
+                            title="Nota Yağmuru (Fa Anahtarı)">
                         </iframe>
                     </div>
 
