--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1086,6 +1086,7 @@
         src="musical-memory.html" 
         width="100%" 
         height="750" 
+        allow="fullscreen; autoplay" 
         style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px;"
         title="Duyduğunu Yakala">
     </iframe>
