--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2152,7 +2152,8 @@ gununBilgisiniGetir();
       "ZmVyaGF0Y2l2YW4wMjA1QG91dGxvb2suY29t": { ad: "RmVyaGF0ZQ==", soyad: "Q2l2YW5lIEJha2FuZQ==" },
       "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" },
       "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" },
-      "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" }
+      "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" },
+      "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" }
   };
 
   // --- ŞİFRE SIFIRLAMA FONKSİYONU EKLENDİ ---
