--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2153,7 +2153,8 @@ gununBilgisiniGetir();
       "YnJrc2xudHNzQGdtYWlsLmNvbQ==": { ad: "TWFobXV0IEJ1cmFr", soyad: "QVNMQU5UQcWe" },
       "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" },
       "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" },
-      "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" }
+      "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" },
+      "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbg== RVJERU4=", soyad: "VE9QT8SWTFU=" }
   };
 
   // --- ŞİFRE SIFIRLAMA FONKSİYONU EKLENDİ ---
