--- a/online-egitim.html
+++ b/online-egitim.html
@@ -2154,7 +2154,7 @@ gununBilgisiniGetir();
       "NDJ0ZXJvYmF5dDYzQGdtYWlsLmNvbQ==": { ad: "ZGVuZW1l", soyad: "aGVzYWLEsW7EsQ==" },
       "Y2FraW5jaUBhZHUuZWR1LnRy": { ad: "w4dhZ2RhxZ8=", soyad: "QUtJTkNJ" },
       "a2VuYW5udTE5ODFAZ21haWwuY29t": { ad: "S2VuYW4=", soyad: "w5ZjYWw=" },
-      "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbiBFUkRFTg==", soyad: "VE9QT8SWTFU=" }
+      "ZXZpbmVyZGVuQGFkdS5lZHUudHI=": { ad: "RXZpbiBFUkRFTg==", soyad: "VE9QT8SWTFUg" }
   };
 
   // --- ŞİFRE SIFIRLAMA FONKSİYONU EKLENDİ ---
