--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1001,24 +1001,51 @@
                         </iframe>
                     </div>
 
-                    <div id="tools-menu-view" class="view-section">
-                        <div class="dashboard-header" style="display: flex; justify-content: space-between;">
-                            <h2 data-translate="portal_menu_tools_title">Araçlar</h2>
-                            <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Geri</span></button>
-                        </div>
-                        <br>
-                        <div class="category-grid">
-                            <div class="cat-box" onclick="sayfaGoster('metronome-view')">
-                                <span class="cat-title" data-translate="portal_menu_metronome">Metronom</span>
-                                <span class="cat-desc">Ritim çalışmaları için.</span>
-                            </div>
-                            <div class="cat-box" onclick="sayfaGoster('tuner-view')">
-                                <span class="cat-title" data-translate="portal_menu_tuner">Akort Cihazı</span>
-                                <span class="cat-desc">Enstrümanınızı akort edin.</span>
-                            </div>
-                        </div>
-                    </div>
+                  <div id="tools-menu-view" class="view-section">
+    <div class="dashboard-header" style="display: flex; justify-content: space-between;">
+        <h2 data-translate="portal_menu_tools_title">Araçlar</h2>
+        <button onclick="window.history.back()" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">← <span data-translate="back_btn">Geri</span></button>
+    </div>
+    <br>
+    <div class="category-grid">
+        <div class="cat-box" onclick="sayfaGoster('metronome-view')">
+            <span class="cat-title" data-translate="portal_menu_metronome">Metronom</span>
+            <span class="cat-desc">Ritim çalışmaları için.</span>
+        </div>
+        <div class="cat-box" onclick="sayfaGoster('tuner-view')">
+            <span class="cat-title" data-translate="portal_menu_tuner">Akort Cihazı</span>
+            <span class="cat-desc">Enstrümanınızı akort edin.</span>
+        </div>
+        <div class="cat-box" onclick="sayfaGoster('generator-view')">
+            <span class="cat-title">Akustik Lab</span>
+            <span class="cat-desc">Frekans jeneratörü ve ses testi.</span>
+        </div>
+    </div>
+</div>
 
+<div id="generator-view" class="view-section" style="display:none;">
+    <div class="dashboard-header" style="display: flex; justify-content: space-between; align-items: center;">
+        <h2>Akustik Laboratuvar</h2>
+        <div>
+            <button onclick="tamEkranYap('gen-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px;">
+                <i class="fas fa-expand"></i> Tam Ekran
+            </button>
+            <button onclick="sayfaGoster('tools-menu-view')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">
+                ← <span>Geri</span>
+            </button>
+        </div>
+    </div>
+    
+    <iframe 
+        id="gen-frame"
+        src="jenerator.html" 
+        width="100%" 
+        height="750" 
+        style="border: none; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.1); margin-top: 10px; background-color: #050505;"
+        allow="autoplay"
+        title="Frekans Jeneratörü">
+    </iframe>
+</div>
                     <div id="ear-training-view" class="view-section">
                         <div class="dashboard-header" style="display: flex; justify-content: space-between;">
                             <h2 data-translate="game_ear_title">Mutlak Duyum Testi</h2>
