--- a/online-egitim.html
+++ b/online-egitim.html
@@ -1023,11 +1023,10 @@
     </div>
 </div>
 
-<div id="generator-view" class="view-section" style="display:none;">
-    <div class="dashboard-header" style="display: flex; justify-content: space-between; align-items: center;">
+<div id="generator-view" class="view-section"> <div class="dashboard-header" style="display: flex; justify-content: space-between; align-items: center;">
         <h2>Akustik Laboratuvar</h2>
         <div>
-            <button onclick="tamEkranYap('gen-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px;">
+            <button onclick="tamEkranYap('gen-frame')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem; margin-right: 15px; transition:0.3s;" onmouseover="this.style.color='var(--accent)'" onmouseout="this.style.color='#888'">
                 <i class="fas fa-expand"></i> Tam Ekran
             </button>
             <button onclick="sayfaGoster('tools-menu-view')" style="background:none; border:none; color:#888; cursor:pointer; font-size: 1rem;">
